unpackaged/main/default/objects/Accommodation__c/Accommodation__c.object-meta.xml
<CustomObject>
    <description>Tracks all student accommodations that are captured in forms.</description>
    <label>Accommodation</label>
    <nameField>
        <label>Accommodation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accommodations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>