unpackaged/main/default/objects/Accommodation__c/fields/Accommodation_Request__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Request__c</fullName>
    <inlineHelpText>Free text area for students to enter their accommodation request</inlineHelpText>
    <label>Accommodation Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>