unpackaged/main/default/objects/Accommodation__c/fields/Data_Release_Consent__c.field-meta.xml
<CustomField>
    <fullName>Data_Release_Consent__c</fullName>
    <inlineHelpText>Indicates when a student consented to release their accommodation information.</inlineHelpText>
    <label>Data Release Consent</label>
    <type>Date</type>
</CustomField>