unpackaged/main/default/objects/Accommodation__c/fields/Disability_Category__c.field-meta.xml
<CustomField>
    <fullName>Disability_Category__c</fullName>
    <label>Disability Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADHD</fullName>
            </value>
            <value>
                <fullName>Learning Disability</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Chronic/ medical condition</fullName>
            </value>
            <value>
                <fullName>Physical disabilities</fullName>
            </value>
            <value>
                <fullName>Low vision/ Blind</fullName>
            </value>
            <value>
                <fullName>Hard of Hearing/ Deaf</fullName>
            </value>
            <value>
                <fullName>Autism Spectrum Disorder</fullName>
            </value>
            <value>
                <fullName>Intellectual disability</fullName>
            </value>
            <value>
                <fullName>Traumatic Brain Injury</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>