unpackaged/main/default/objects/Accommodation__c/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Accommodations</relationshipLabel>
    <relationshipName>Accommodations</relationshipName>
    <type>Lookup</type>
</CustomField>