unpackaged/main/default/objects/Accommodation__c/fields/Housing_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Type__c</fullName>
    <label>Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>