unpackaged/main/default/objects/Accommodation__c/fields/How_Accommodation_Supports_Student__c.field-meta.xml
<CustomField>
    <fullName>How_Accommodation_Supports_Student__c</fullName>
    <inlineHelpText>How the requested accommodation supports a student&#39;s needs.</inlineHelpText>
    <label>How Accommodation Supports Student</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>