unpackaged/main/default/objects/Accommodation__c/fields/Other_Party_Consent__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Consent__c</fullName>
    <inlineHelpText>This field contains other parties that information can be released.</inlineHelpText>
    <label>Other Party Consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>