unpackaged/main/default/objects/Accommodation__c/fields/Received_Letter_from_RBC__c.field-meta.xml
<CustomField>
    <fullName>Received_Letter_from_RBC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to track whether the RBC academic accommodation letter has been received.</description>
    <inlineHelpText>Checkbox to track whether the RBC academic accommodation letter has been received and attached.</inlineHelpText>
    <label>Received Letter from RBC?</label>
    <type>Checkbox</type>
</CustomField>