unpackaged/main/default/objects/Accommodation__c/fields/Requires_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Accommodation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Accommodation?</label>
    <type>Checkbox</type>
</CustomField>