unpackaged/main/default/objects/Accommodation__c/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <formula>Enrollment_Record__r.Program__r.Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Location</label>
    <type>Text</type>
</CustomField>