unpackaged/main/default/objects/Accommodation__c/fields/Verto_Staff_Faculty_Consent__c.field-meta.xml
<CustomField>
    <fullName>Verto_Staff_Faculty_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verto Staff/Faculty Consent</label>
    <type>Checkbox</type>
</CustomField>