unpackaged/main/default/objects/Accommodation__c/recordTypes/Academic.recordType-meta.xml
<RecordType>
    <fullName>Academic</fullName>
    <active>true</active>
    <label>Academic</label>
</RecordType>