unpackaged/main/default/objects/Accommodation__c/recordTypes/Dietary.recordType-meta.xml
<RecordType>
    <fullName>Dietary</fullName>
    <active>true</active>
    <label>Dietary</label>
</RecordType>