unpackaged/main/default/objects/Accommodation__c/recordTypes/Housing.recordType-meta.xml
<RecordType>
    <fullName>Housing</fullName>
    <active>true</active>
    <label>Housing</label>
</RecordType>