unpackaged/main/default/objects/Accommodation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accommodation_Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Student_Name__c</columns>
    <columns>Full_Name_Missing_Enrollment_Id__c</columns>
    <columns>Email_Missing_Enrollment_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>