unpackaged/main/default/objects/Accommodation__c/listViews/Orphaned_Accommodations.listView-meta.xml
<ListView>
    <fullName>Orphaned_Accommodations</fullName>
    <columns>NAME</columns>
    <columns>Full_Name_Missing_Enrollment_Id__c</columns>
    <columns>Email_Missing_Enrollment_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrollment_Record__c</field>
        <operation>equals</operation>
    </filters>
    <label>Orphaned Accommodations</label>
</ListView>